@startuml
'https://plantuml.com/class-diagram

class ImportFileSnsUsersUI
{
- ImportFileSnsUsersController controller
- RegisterSnsUserController snsUserController
- String name
- String address
- String sex
- String phoneNumber
- String email
- String birthdate
- String snsNumber
- String citizenCardNumber
- String smsPermission
- String valid
}

class ImportFileSnsUsersController{
- FileSnsUserStore fileSnsUserStore
+ String[][] SeparateUsers(fileUsers)
}

class FileSnsUserStore{
- Int qtLines
+ void countUsers(File fileUsers)
+ String[][] separateUsers (File fileUsers)
}








class RegisterSnsUserController {
- SnsUserStore snsUserStore
- SnsUser snsUser
+ createSnsUser(SnsUserDto dto)
+ boolean registerSnsUser()
}

class SnsUserStore {
- Map<Integer, SnsUser> snsUsers
+ createSnsUser(SnsUserDto dto)
- validateUser(SnsUser user)
+ registerSnsUser(SnsUser snsUser)
- addSnsUser (SnsUser snsUser)
+ getSnsUsers()

}


class SnsUserMapper {

+ toSnsUser(SnsUserDto dto)
}

class SnsUser {

- String name
- int snsNumber
- Email email
- int smsPermission

- validateInformation(String name,int snsNumber,String email, int smsPermission )

}

class SnsUserDto {
- String name
- int snsNumber
- Email email
- int smsPermission
+ getName()
+ getSnsNumber()
+ getEmail()
+ getSmsPermission()

}


class PasswordGenerator {
- Random RANDOM
- String CAPITAL
- String ALPHABET
- String NUMBERS

+ pwdGenerator (int length,int capitals, int numbers)

}

class Company {
- String designation
- AuthFacade authFacade
- SnsUserStore snsUserStore

+ getAuthFacade()
+ getSnsUserStore()

}

class AuthFacade {
+existsUser(email)
+addUserWithRole(name,email,pwd,"CLIENT"

}


ImportFileSnsUsersUI .-> ImportFileSnsUsersController
ImportFileSnsUsersController .-> FileSnsUserStore
ImportFileSnsUsersUI .-> RegisterSnsUserController
RegisterSnsUserController .-> SnsUserStore
RegisterSnsUserController.-> Company
RegisterSnsUserController.-> SnsUserDto
Company -> SnsUserStore : contains >
Company -> AuthFacade : contains >
SnsUserStore .-> SnsUserMapper
SnsUserStore .--> SnsUserDto
SnsUserStore .--> PasswordGenerator
SnsUserStore .--> AuthFacade
SnsUserStore ----> SnsUser : contains >
SnsUserMapper .-> SnsUserDto


@enduml